--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <form>
                 <h4 class="card-text">Location Search</h4>
                 <div class="input-group">
-                    <input type="text" class="form-control" id="cityInput" placeholder="Enter Country or Provice">
+                    <input type="text" class="form-control" id="cityInput" placeholder="Enter Country or Province">
                     <div class="input-group-append">
                         <!-- Search Button -->
                         <button type="submit" id="submitCity" class="btn btn-dark"><i
