Fixed a class for my CSS.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="row">&nbsp;</div>
 
             <!-- Global Stats -->
-            <div class="card bg-custom-1 global">
+            <div class="card bg-custom-1 squeeze">
                 <div class="card-body bg-custom-1">
                     <!-- Flex! -->
                     <h5 class="card-title card-text d-flex justify-content-center" id="global-stats">Global Statistics
@@ -105,7 +105,7 @@
             <div class="row">&nbsp;</div>
 
             <!-- State Stats -->
-            <div class="card bg-custom-1 state">
+            <div class="card bg-custom-1 squeeze">
                 <div class="card-body bg-custom-1">
                     <!-- Flex! -->
                     <h5 class="card-title card-text d-flex justify-content-center" id="state-stats">Local Statistics
