Fixed missing link for First Responders in Additional Resources.

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                         <li><a href="https://swingeducation.com/resources/20-online-learning-resources-to-help-you-get-through-coronavirus-school-closures/"
                                 target="_blank">
                                 Home Learning for All Ages</a></li>
-                        <li><a href="#">Resources for First Responders</a></li>
+                        <li><a href="https://1strcf.org/" target="_blank">Support our for First Responders</a></li>
                         <li><a href="https://www.samhsa.gov/dtac/disaster-responders" target="_blank">
                                 Resources for Mental Health Providers</a></li>
                         <li><a href="https://www.instyle.com/lifestyle/domestic-violence-coronavirus-how-to-help"
