Made MapBox clusters and dots green to match color scheme.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <!-- Navbar links not working yet -->
         <!-- Should we delete this? -->
-        <div class="navbar-collapse collapse">
+        <!-- <div class="navbar-collapse collapse">
             <ul class="navbar-nav justify-content-right">
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link 1</a>
@@ -45,7 +45,7 @@
                     <a class="nav-link" href="#">Link 3</a>
                 </li>
             </ul>
-        </div>
+        </div> -->
     </nav>
 
     <!-- Main Container -->
@@ -68,11 +68,10 @@
                 </div>
             </form> -->
 
-            <!-- Map -->
             <!-- Corona World Details Render here -->
             <div id="corona-world-details">
-                <!-- Render the table here -->
             </div>
+            <!-- Map -->
             <div id="map"></div>
             <select name="select-country" class="hidden">
             </select>
