--- a/index.html
+++ b/index.html
@@ -4,94 +4,290 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- Font Pack -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <!-- Mapbox CSS -->
+    <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.css">
+    <!-- Mapbox Geocoder CSS -->
+    <link rel="stylesheet"
+        href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.3.0/mapbox-gl-geocoder.css"
+        type="text/css">
+    <!-- Map CSS -->
+    <link rel="stylesheet" href="assets/css/maps.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="assets/css/style.css">
 
-    <title>Covid-Commu-Dash</title>
+    <!-- Project Title -->
+    <title>Covid-19 Tracker</title>
 
 </head>
 
 <body>
-    <!-- <nav class="navbar navbar-dark bg-dark"> -->
-    <div class="jumbotron">
-        <!-- .dblock & .mx-auto make the images centered and responsive
-            id tags to set size in css, probably a better way than this though -->
-        <img src="./assets/image/covid-commu-3.png" alt="Covid-Commu-Dash Logo" class="mx-auto d-block"
-            id="cov-com-text">
-        <!-- <img src="./assets/image/covid-commu-icon.png" alt="Covid-Commu-Dash Logo" class="mx-auto d-block"
-                id="cov-com-icon"> -->
-    </div>
-    <!-- </nav> -->
+
+    <!-- Main NavBar -->
+    <nav class="navbar navbar-light navbar-collapse bg-custom-1">
+        <a class="navbar-brand justify-content-between">
+            <img src="assets/images/covid-19-tracker.png" width="400" alt=""></a>
+    </nav>
+
+    <!-- Main Container -->
     <div class="row">&nbsp;</div>
+
     <div class="container">
-
-        <div class="card" id="search-card">
-            <div class="card-body">
-                <button class="btn btn-lg btn-block btn-success search-button">Find Local Information</button>
+        <div class="card-body">
+            <div class="row">
+                <h4 class="card-text ml-auto pr-4 pb-2">Location Search</h4>
             </div>
-        </div>
 
-        <div class="row">&nbsp;</div>
-
-        <div class="card all-cards">
-            <div class="card-body">
-                <div class="card-title">Map</div>
-                <hr>
-                <p>Possibly a map showing useful places related to covid wellness or
-                    just getting some services or food.
-                    <a href="https://www.mapbox.com">mapbox.com</a> might be the way to go</p>
+            <!-- Corona World Details Render here -->
+            <div id="corona-world-details">
             </div>
-        </div>
-        <div class="row">&nbsp;</div>
-
-        <div class="card all-cards">
-            <div class="card-body">
-                <div class="card-title">Recent Cases / Local Situation</div>
-                <hr>
-                <p>A look at the data trends in the area. New cases etc.
-                </p>
+            <!-- Map -->
+            <div id="map"></div>
+            <select name="select-country" class="hidden">
+            </select>
+            <div id=" corona-details">
             </div>
-        </div>
-        <div class="row">&nbsp;</div>
+            <div class="row">&nbsp;</div>
 
-        <div class="card all-cards">
-            <div class="card-body">
-                <div class="card-title">Resources / Local Resources</div>
-                <hr>
-                <p>This section might be harder to fill. Will we have / find the right API resources to pull up local
-                    resources? Or should the goal be to more simply offer CDC / WHO resources along with lighter
-                    material like things to do while sheltering in place?</p>
-
+            <!-- Global Stats -->
+            <div class="card bg-custom-1 squeeze">
+                <div class="card-body bg-custom-1">
+                    <!-- Flex! -->
+                    <h5 class="card-title card-text d-flex justify-content-center" id="global-stats">Global Statistics
+                    </h5>
+                    <hr>
+                    <!-- dynamically filled <p> - class .cards-p for CSS -->
+                    <div class="row">
+                        <div class="col card-text" id="global-cases"></div>
+                        <div class="col card-text-2" id="global-recovered"></div>
+                        <div class="col card-text-3" id="global-deaths"></div>
+                        <div class="col card-text-4" id="global-new"></div>
+                    </div>
+                    <p class="card-text d-flex justify-content-center"><small class="text-muted"
+                            id="global-time"></small></p>
+                </div>
             </div>
-        </div>
-        <div class="row">&nbsp;</div>
 
-        <div class="card all-cards">
-            <div class="card-body">
-                <div class="card-title">News Section</div>
-                <hr>
-                <p>Found a good starting point for this with the CDC's 2019 Novel Coronavirus API. See script file, open
-                    console.</p>
+            <div class="row">&nbsp;</div>
+
+            <!-- News -->
+            <div class="card bg-custom-1">
+                <div class="card-body">
+                    <div>
+                        <h5 class="card-title card-text" id="news">National Covid-19 Headlines</h5>
+                    </div>
+                    <hr>
+                    <!-- .hide is the toggle class, important! -->
+                    <ul class="hide" id="news-list">
+                        <!-- dynamically filled -->
+                    </ul>
+                    <!-- this button hides/reveals more info by toggling .hide in app.js -->
+                    <button class="btn btn-outline-success shadow-none" id="more-news" type="button">
+                        Show More</button>
+                </div>
             </div>
+
+            <div class="row">&nbsp;</div>
+
+            <!-- Select State if ipapi.co can't
+                    detect where you are (VPN or mobile data network) -->
+            <div id="user-search">
+                <!-- Flex! -->
+                <div class="d-flex justify-content-center">
+                    <p style="color:white;">Not Seeing Local Info?</p>
+                </div>
+                <div class="dropdown d-flex justify-content-center">
+                    <button class="btn btn-sm btn-success shadow-none dropdown-toggle" id="dropdownMenuButton"
+                        type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Select Your State
+                    </button>
+                    <div class="dropdown-menu pre-scrollable state-hide" aria-labelledby="dropdownMenuButton">
+                        <!-- Some two word states are separated by an underscore, others are a hyphen. -->
+                        <a class="dropdown-item" value="no">Select State</a>
+                        <a class="dropdown-item" value="alabama">Alabama</a>
+                        <a class="dropdown-item" value="alaska">Alaska</a>
+                        <a class="dropdown-item" value="arizona">Arizona</a>
+                        <a class="dropdown-item" value="arkansas">Arkansas</a>
+                        <a class="dropdown-item" value="california">California</a>
+                        <a class="dropdown-item" value="colorado">Colorado</a>
+                        <a class="dropdown-item" value="connecticut">Connecticut</a>
+                        <a class="dropdown-item" value="delaware">Delaware</a>
+                        <a class="dropdown-item" value="florida">Florida</a>
+                        <a class="dropdown-item" value="georgia">Georgia</a>
+                        <a class="dropdown-item" value="hawaii">Hawaii</a>
+                        <a class="dropdown-item" value="idaho">Idaho</a>
+                        <a class="dropdown-item" value="illinois">Illinois</a>
+                        <a class="dropdown-item" value="indiana">Indiana</a>
+                        <a class="dropdown-item" value="iowa">Iowa</a>
+                        <a class="dropdown-item" value="kansas">Kansas</a>
+                        <a class="dropdown-item" value="kentucky">Kentucky</a>
+                        <a class="dropdown-item" value="louisiana">Louisiana</a>
+                        <a class="dropdown-item" value="maine">Maine</a>
+                        <a class="dropdown-item" value="maryland">Maryland</a>
+                        <a class="dropdown-item" value="massachusetts">Massachusetts</a>
+                        <a class="dropdown-item" value="michigan">Michigan</a>
+                        <a class="dropdown-item" value="minnesota">Minnesota</a>
+                        <a class="dropdown-item" value="mississippi">Mississippi</a>
+                        <a class="dropdown-item" value="missouri">Missouri</a>
+                        <a class="dropdown-item" value="montana">Montana</a>
+                        <a class="dropdown-item" value="nebraska">Nebraska</a>
+                        <a class="dropdown-item" value="nevada">Nevada</a>
+                        <a class="dropdown-item" value="new_hampshire">New Hampshire</a>
+                        <a class="dropdown-item" value="new-jersey">New Jersey</a>
+                        <a class="dropdown-item" value="new-mexico">New Mexico</a>
+                        <a class="dropdown-item" value="new-york">New York</a>
+                        <a class="dropdown-item" value="north-carolina">North Carolina</a>
+                        <a class="dropdown-item" value="north_dakota">North Dakota</a>
+                        <a class="dropdown-item" value="ohio">Ohio</a>
+                        <a class="dropdown-item" value="oklahoma">Oklahoma</a>
+                        <a class="dropdown-item" value="oregon">Oregon</a>
+                        <a class="dropdown-item" value="pennsylvania">Pennsylvania</a>
+                        <a class="dropdown-item" value="rhode_island">Rhode Island</a>
+                        <a class="dropdown-item" value="south_carolina">South Carolina</a>
+                        <a class="dropdown-item" value="south_dakota">South Dakota</a>
+                        <a class="dropdown-item" value="tennessee">Tennessee</a>
+                        <a class="dropdown-item" value="texas">Texas</a>
+                        <a class="dropdown-item" value="utah">Utah</a>
+                        <a class="dropdown-item" value="vermont">Vermont</a>
+                        <a class="dropdown-item" value="virginia">Virginia</a>
+                        <a class="dropdown-item" value="washington">Washington</a>
+                        <a class="dropdown-item" value="west_virginia">West Virginia</a>
+                        <a class="dropdown-item" value="wisconsin">Wisconsin</a>
+                        <a class="dropdown-item" value="wyoming">Wyoming</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">&nbsp;</div>
+
+            <!-- State Stats -->
+            <div class="card bg-custom-1 squeeze">
+                <div class="card-body bg-custom-1">
+                    <!-- Flex! -->
+                    <h5 class="card-title card-text d-flex justify-content-center" id="state-stats">Local Statistics
+                    </h5>
+                    <hr>
+                    <!-- .cards-p created dynamically in app.js-->
+                    <div class="row state">
+                        <div class="col card-text" id="state-name"></div>
+                        <div class="col card-text-2" id="state-cases"></div>
+                        <div class="col card-text-3" id="state-deaths"></div>
+                        <div class="col card-text-4" id="state-new"></div>
+                    </div>
+                    <p class="card-text d-flex justify-content-center"><small class="text-muted"
+                            id="state-time"></small></p>
+                </div>
+            </div>
+            <div class="row">&nbsp;</div>
+
+            <div class="row">&nbsp;</div>
+
+            <!-- Local Testing -->
+            <div class="card bg-custom-1">
+                <div class="card-body">
+                    <div>
+                        <h5 class="card-title card-text" id="local-testing">
+                            Testing in Your State
+                            <!-- span filled dynamically with user's state -->
+                            <span id="your-state"></span></h5>
+                    </div>
+                    <hr>
+                    <!-- .hide toggle class -->
+                    <ul class="hide" id="test-list">
+                        <!-- dynamically filled -->
+                    </ul>
+                    <!-- button toggles .hide -->
+                    <button class="btn btn-outline-success shadow-none" id="more-tests" type="button">
+                        Show More</button>
+                </div>
+            </div>
+
+            <div class="row">&nbsp;</div>
+
+            <div class="card bg-custom-1">
+                <div class="card-body">
+                    <div>
+                        <h5 class="card-title card-text" id="more-resources">Additional Resources</h5>
+                    </div>
+                    <hr>
+                    </p>
+                    <ul id="more-list">
+                        <p class="card-text">These are difficult times for everyone. Please do not suffer
+                            alone.</p>
+                        <li><a href="https://www.benefits.gov/help/faq/Coronavirus-resources" target="_blank">
+                                Financial Support</a></li>
+                        <li><a href="https://www.cdc.gov/coronavirus/2019-ncov/daily-life-coping/managing-stress-anxiety.html"
+                                target="_blank">
+                                Coping with Anxiety</a></li>
+                        <li><a href="https://www.feedingamerica.org/find-your-local-foodbank" target="_blank">
+                                Find Local Food Banks</a></li>
+                        <li><a href="https://www.cdc.gov/coronavirus/2019-ncov/if-you-are-sick/care-for-someone.html"
+                                target="_blank">
+                                Caring for Loved Ones</a></li>
+                        <li><a href="https://swingeducation.com/resources/20-online-learning-resources-to-help-you-get-through-coronavirus-school-closures/"
+                                target="_blank">
+                                Home Learning for All Ages</a></li>
+                        <li><a href="https://1strcf.org/" target="_blank">Support our for First
+                                Responders</a></li>
+                        <li><a href="https://www.samhsa.gov/dtac/disaster-responders" target="_blank">
+                                Resources for Mental Health Providers</a></li>
+                        <li><a href="https://www.instyle.com/lifestyle/domestic-violence-coronavirus-how-to-help"
+                                target="_blank">
+                                Resources for Domestic Violence Survivors</a></li>
+                        <li><a href="https://www.them.us/story/online-resources-lgbtq-coronavirus" target="_blank">
+                                Resources for LGBTQ+ Community</a></li>
+                        <li><a href="https://www.blogs.va.gov/VAntage/72856/veterans-multiple-resources-covid-19-information/"
+                                target="_blank">
+                                Resources for Veterans</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Page Break -->
+            <br>
+
+            <!-- Footer -->
+            <p class="m-0 align-self-center text-center"><a style="color: white; letter-spacing: 0.1em;">
+                    Made with <img style="margin-top: -2px;" width="20" height="20"
+                        src="https://img.icons8.com/dusk/64/000000/like.png" /> by <a
+                        style="font-size: 15px; color: white; letter-spacing: 0.1em;" href="https://github.com/chaseyb"
+                        target="_blank">Chase Johnson,</a><a
+                        style="font-size: 15px; color: white; letter-spacing: 0.1em;"
+                        href="https://github.com/gloriousLoaf" target="_blank"> David Metcalf,</a><a
+                        style="font-size: 15px; color: white; letter-spacing: 0.1em;"
+                        href="https://github.com/mauricechouam" target="_blank"> Maurice Chouamou </a>
+            </p>
         </div>
-
-
     </div>
 
-
-
-
-
+    <!-- Moment.js for Stats Cards -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <!-- main jQuery library -->
     <script src="https://code.jquery.com/jquery-3.5.0.min.js"
         integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
-    <!-- jQuery UI -->
+    <!-- jQuery UI (must have for Show More buttons) -->
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
         integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
-    <!-- my script.js -->
-    <script src="./assets/javascript/script.js"></script>
+    <!-- Popper.js (must have for Bootstrap.js) -->
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <!-- Bootstrap.js (must have for State dropdown) -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
+    <!-- Nprogress JS (Progress Bar) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/nprogress/0.2.0/nprogress.min.js"></script>
+    <!-- Mapbox JS -->
+    <script src="https://api.mapbox.com/mapbox-gl-js/v1.10.0/mapbox-gl.js"></script>
+    <!-- Mapbox JS Geocoder Plugins -->
+    <script
+        src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.3.0/mapbox-gl-geocoder.min.js"></script>
+    <!-- Our Custom JS -->
+    <script src="assets/javascript/maps.js"></script>
 
 </body>
 
