--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="card bg-custom-1">
                 <div class="card-body">
                     <div>
-                        <h5 class="card-title card-text" id="news">National Covid-19 Headlines</h5>
+                        <h5 class="card-title card-text" id="news">Global Covid-19 Headlines</h5>
                     </div>
                     <hr>
                     <!-- .hide is the toggle class, important! -->
